--- a/tre-judgment-packer/Dockerfile
+++ b/tre-judgment-packer/Dockerfile
@@ -4,10 +4,10 @@ FROM public.ecr.aws/lambda/python:3.8
 ARG PIP_INDEX_URL
 
 # Copy function code
-COPY "/tre-judgment-packer/tre_judgment_packer.py" ${LAMBDA_TASK_ROOT}
+COPY "tre_judgment_packer.py" ${LAMBDA_TASK_ROOT}
 
 # Install the function's dependencies using file requirements.txt
-COPY /tre-judgment-packer/requirements.txt ./requirements.txt
+COPY requirements.txt ./requirements.txt
 RUN  yum -y update \
     && yum clean all \
     && pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
