--- a/tre-judgment-packer/Dockerfile
+++ b/tre-judgment-packer/Dockerfile
@@ -3,11 +3,15 @@ FROM public.ecr.aws/lambda/python:3.8
 # Copy function code
 COPY "tre_judgment_packer.py" ${LAMBDA_TASK_ROOT}
 
+ARG PIP_INDEX_URL
+
 # Install the function's dependencies using file requirements.txt
 COPY requirements.txt ./requirements.txt
-RUN  yum -y update \
+RUN  echo "Build argument PIP_INDEX_URL: ${PIP_INDEX_URL}"\
+    && yum -y update \
     && yum clean all \
-    && pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
+    && pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}" \
+
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "tre_judgment_packer.handler" ]
