--- a/tre-judgment-packer/Dockerfile
+++ b/tre-judgment-packer/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM public.ecr.aws/lambda/python:3.13
 
 # Loading Variables from Github Actions environment
 ARG PIP_INDEX_URL
@@ -8,9 +8,9 @@ COPY "tre_judgment_packer.py" ${LAMBDA_TASK_ROOT}
 
 # Install the function's dependencies using file requirements.txt
 COPY requirements.txt ./requirements.txt
-RUN  yum -y update \
-    && yum clean all \
-    && pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
+RUN dnf upgrade
+RUN dnf clean all --enablerepo=\*
+RUN pip install --requirement requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "tre_judgment_packer.handler" ]
