--- a/tre-judgment-packer/Dockerfile
+++ b/tre-judgment-packer/Dockerfile
@@ -10,7 +10,7 @@ COPY "tre_judgment_packer.py" ${LAMBDA_TASK_ROOT}
 COPY requirements.txt ./requirements.txt
 RUN dnf upgrade
 RUN dnf clean all --enablerepo=\*
-RUN pip install --requirement requirements.txt --target "${LAMBDA_TASK_ROOT}"
+RUN pip3 install --requirement requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "tre_judgment_packer.handler" ]
